--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
-<html>
-    <h1>DogCheese.org</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DogCheese.org</title>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    <header>
+        <h1>DogCheese.org</h1>
+    </header>
+
+    <main>
+        <section class="about">
+            <h2>What is DogCheese?</h2>
+        </section>
+
+        <section class="flashy">
+            <div class="flash-item">🧀 </div>
+            <div class="flash-item">🐕</div>
+            <div class="flash-item">🎉 </div>
+        </section>
+
+        <section class="cta">
+            <h2>Join Dog Cheese!</h2>
+            <button class="join-btn" onclick="triggerConfetti()">Click Me</button>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 DogCheese.org | All Rights Reserved</p>
+    </footer>
+    <script src="script.js"></script>
+
+</body>
+
 </html>
