--- a/royal-lineage.html
+++ b/royal-lineage.html
@@ -1,1 +1,81 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Royan Lineage</title>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: #27180e;
+            font-family: 'Georgia', serif;
+            font-family: 'Georgia', serif; /* Old-school serif font */
+            background: url('scroll.png') no-repeat center center / cover; /* Background scroll image */
+            background-color: black; /* Black background */
+        }
+        .scroll {
+                width: 75%; /* Takes up 3/4ths of the screen */
+                margin: auto; /* Centers with blank space on either side */
+                padding: 20px;
+                background: url('scroll.png') no-repeat center center / cover; /* Transparent scroll background */
+        }
+        h2 {
+            font-size: 2em;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .ruler {
+            margin-bottom: 20px;
+        }
+        .ruler-name {
+            font-size: 3.5em;
+            font-weight: bold;
+        }
+        .ruler-description {
+            font-size: 1.5em;
+            color: #000000;
+            margin-left: 15px;
+        }
+    </style>
+</head>
+<body>
+    <div class="scroll">
+        <h2>Royal Lineage of House Cheesius</h2>
+        <div class="ruler">
+            <div class="ruler-name">Dog Cheesieus I</div>
+            <div class="ruler-description">Dog Cheesieus the First is known for his great invention of dog cheese, but he was kicked out by the Habsburg duke of Tyrol and fled to Transylvania under the reign of Goobsnobbler the Fiend. The people loved his invention of dog cheese, granting him the name “Dog Cheesieus” but it wouldn’t be until Dog Cheesius the Great that dog cheese became a fundamental food of the people.
+            </div>
+        </div>
+        <div class="ruler">
+            <div class="ruler-name">Dog cheesieus II</div>
+            <div class="ruler-description">Dog Cheesieus the Second set up his son (D.C. Great) to bring dog cheese to the people, II was also able to introduce small bits of dog cheese to the people, once again setting his son up for greatness.
+                (is credited with the famous quote “With dog cheese, anything is possible”)
+                </div>
+        </div>
+        <div class="ruler">
+            <div class="ruler-name">Dog Cheesieus the Great (III)</div>
+            <div class="ruler-description">Dog Cheesieus the Great was the first to bring dog cheese to the people like Prometheus did fire. He came from the Carpathians with oodles of dog cheese of all of the first 3 hollowed varieties, “Carpathian Sajt”, “Tyrolean Cremig”, and “Sanctus Canis”. The people cheered his arrival on the white fox trotters named “Alpok” and “Kárpáti”. He gave the people dog cheese, they were so enthralled Dog Cheesius the Great roused them to revolt against the brutal Goobsnobbler the Fiend lord of Transylvania (see more about the fight against the Fiend later on). He became King of Doegkesia, and was given by the people the title “Dog Cheesieus the Great”  
+                .</div>
+        </div>
+        <div class="ruler">
+            <div class="ruler-name">Dog Cheesieus the Bloodless (IV)</div>
+            <div class="ruler-description">Conquered lands to the west, mainly Hungarian land, during the battle of Debrecen he used stealth tactics to win a battle with only 5,000 men against 13,000 without killing a single man, he used this non-lethal tactics so effectively and was so good to those he conquered, they instantly converted to Canism and fought for Dog Cheesieus, with a army that grew and grew the king of Hungary had no choice but to surrender.
+            </div>
+        </div>
+        <div class="ruler">
+            <div class="ruler-name">Dog Cheesieus V</div>
+            <div class="ruler-description">Taught by his father, Dog Cheesius the Bloodless (IV), V was also a great general and conquered large swaths of land to the north of Doegkesia. However, he died in these conquests and Doegkesia went into an era of peace for many decades until Dog “Italianus” Cheesius VIII expanded the nation once again.
+            </div>
+        </div>
+        <div class="ruler">
+            <div class="ruler-name">Dog Cheesieus VI</div>
+            <div class="ruler-description">Dog Cheesieus VI was the first female head of House Cheesieus, she led the people to cultivate many new types of dog cheese and greatly improved the lives of the people within Doegkesia. Tragically however, she died after the first strain of evil dog cheese seeped into her pores.
+            </div>
+        </div>
+
+    </div>
+</body>
+</html>
