--- a/royal-lineage.html
+++ b/royal-lineage.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="ruler">
-            <div class="ruler-name">Dog cheesieus II</div>
+            <div class="ruler-name">Dog Cheesieus II</div>
             <div class="ruler-description">Dog Cheesieus the Second set up his son (D.C. Great) to bring dog cheese to the people, II was also able to introduce small bits of dog cheese to the people, once again setting his son up for greatness.
                 (is credited with the famous quote “With dog cheese, anything is possible”)
                 </div>
