--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             height: 100vh;
             margin: 0;
             font-family: 'Times New Roman', serif;
-            background-color: #000000;
+            background-color: #1b1b1b;
         }
         #container {
             text-align: center;
