--- a/royal-lineage.html
+++ b/royal-lineage.html
@@ -14,15 +14,16 @@
             font-family: 'Georgia', serif;
             font-family: 'Georgia', serif; /* Old-school serif font */
             background: url('scroll.png') no-repeat center center / cover; /* Background scroll image */
-            background-color: black; /* Black background */
+            background-color: rgb(0, 0, 0); /* Black background */
         }
         .scroll {
                 width: 75%; /* Takes up 3/4ths of the screen */
                 margin: auto; /* Centers with blank space on either side */
                 padding: 20px;
         }
+        
         h2 {
-            font-size: 2em;
+            font-size: 4.5em;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -42,7 +43,7 @@
 </head>
 <body>
     <div class="scroll">
-        <h2>Royal Lineage of House Cheesius</h2>
+        <h2>The Royal Lineage of House Cheesius</h2>
         <div class="ruler">
             <div class="ruler-name">Dog Cheesieus I</div>
             <div class="ruler-description">Dog Cheesieus the First is known for his great invention of dog cheese, but he was kicked out by the Habsburg duke of Tyrol and fled to Transylvania under the reign of Goobsnobbler the Fiend. The people loved his invention of dog cheese, granting him the name “Dog Cheesieus” but it wouldn’t be until Dog Cheesius the Great that dog cheese became a fundamental food of the people.
@@ -74,7 +75,6 @@
             <div class="ruler-description">Dog Cheesieus VI was the first female head of House Cheesieus, she led the people to cultivate many new types of dog cheese and greatly improved the lives of the people within Doegkesia. Tragically however, she died after the first strain of evil dog cheese seeped into her pores.
             </div>
         </div>
-
     </div>
 </body>
 </html>
